# all_seaing_vehicle

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  default.nix  log.txt  out.txt  overlay.nix  package.xml  requirements.txt  result
all_seaing_autonomy/: CMakeLists.txt  package.nix  package.xml
all_seaing_autonomy/all_seaing_autonomy/: buoy_utils.py  geometry_utils.py
all_seaing_autonomy/protobuf/: client.py  report_pb2.py  test_boat_node.py
all_seaing_bringup/: CMakeLists.txt  package.nix  package.xml
all_seaing_bringup/config/: dual_ekf_navsat.yaml
all_seaing_bringup/launch/: .vehicle.launch.py.swp  amcl.launch.py  cartographer.launch.py  debug_obstacle_detection.launch.py  debug_obstacle_detection.py  perception.launch.py  replay_recordings.launch.py  sensor_bringup.launch.py  shoreside.launch.py  sim.launch.py  tasks.launch.py  tasks_rosbag.launch.py  test_localize.launch.py  vehicle-nix-test.py  vehicle-nix.py  vehicle-non-nix.launch.py  vehicle-non-nix.py  vehicle.launch.py  xdrive.launch.py  xdrive_full_test_sim.launch.py  xdrive_roboboat.launch.py
all_seaing_bringup/map/: conference.pgm  conference.yaml  frames_2025-01-26_22.13.44.gv  sea_grant.yaml  tank.pgm  tank.yaml  z_center.pgm  z_center.yaml
all_seaing_bringup/rosbag_record/: record_camera.bash  record_docking_perception.bash  record_everything.bash  record_follow_path.bash  record_follow_path_fallback.bash  record_lidar.bash  record_lidar_camera.bash  record_lidar_camera_front.bash  record_lio.bash  record_localization.bash  record_meche.bash  record_slam.bash  record_slam_minimal.bash  record_speed.bash  record_speed_fallback.bash  record_thrusters.bash
all_seaing_bringup/rviz/: dashboard.rviz
all_seaing_bringup/scripts/: during_run.bash  on_boot.bash
all_seaing_common/: CMakeLists.txt  package.xml
all_seaing_common/all_seaing_common/: action_server_base.py  qos.py  report.proto  report.py  report_pb2.py  task_server_base.py
all_seaing_controller/: CMakeLists.txt  package.nix  package.xml
all_seaing_controller/all_seaing_controller/: angle_printer.py  control_mux.py  controller_server.py  goal_publisher.py  joy_to_control.py  moos_to_controller.cpp  odom_printer.py  pid_controller.py  potential_field.py  sample_publisher.py  simple_controller.py  xdrive_controller.py
all_seaing_driver/: CMakeLists.txt  package.nix  package.xml
all_seaing_driver/all_seaing_driver/: ArcturusEE.py  boat_controller.py  central_hub.py  central_hub_ros.py  comm_protocol_reporter.py  custom_onshore_node.py  driver_lib.py  driver_library.py  driver_publisher.py  gps_converter.py  gpsraw_converter.py  imu_reframe.py  manual_control_node.py  manual_controller.py  object_delivery.py  object_delivery_node.py  odom_reframe.py  odometry_publisher.py  onshore_lora_combined.py  onshore_lora_controller.py  onshore_lora_heartbeat.py  onshore_node.py  rover_custom_controller.py  rover_lora_combined.py  rover_lora_controller.py  rover_lora_heartbeat.py  rover_lora_reporter.py  sound_signal_detector.py  test_gps.csv  test_gps_publisher.py  test_mechanisms.py  thrust_commander.py  water_delivery.py  webcam_publisher.py  webcam_splitter.py  zed2i_publisher.py
all_seaing_driver/config/: imu_filter.yaml  keyboard_controls.yaml  mavros.yaml  oak.yaml  zed2i.yaml  zed_f9p.yaml
all_seaing_driver/launch/: 32e_points.launch.py  keyboard.launch.py  mavros.launch.py  oak.launch.py  ublox_gps.launch.py  zed2i.launch.py
all_seaing_driver/protobuf/: TCP_library.py  shoreside_client.py  test_boat_node.py  test_server.py
all_seaing_interfaces/: CMakeLists.txt  package.nix  package.xml
all_seaing_interfaces/action/: Delivery.action  FollowPath.action  Navigation.action  Search.action  ShootBoat.action  Task.action  WaterDelivery.action  Waypoint.action
all_seaing_interfaces/msg/: ASV2State.msg  ASVState.msg  BoatInfo.msg  BoundingBox.msg  BuoyPair.msg  BuoyPairArray.msg  CloudCluster.msg  ContinuousWaypoint.msg  ControlMessage.msg  ControlOption.msg  EstopStatus.msg  GoalState.msg  Heartbeat.msg  LabeledBoundingBox2D.msg  LabeledBoundingBox2DArray.msg  LabeledObjectPlane.msg  LabeledObjectPlaneArray.msg  LabeledObjectPointCloud.msg  LabeledObjectPointCloudArray.msg  MOOSCommand.msg  Obstacle.msg  ObstacleCounter.msg  ObstacleCounterArray.msg  ObstacleFeature.msg  ObstacleMap.msg  Waypoint.msg  WaypointStatus.msg
all_seaing_interfaces/srv/: AcknowledgeLowBattery.srv  CommandAdj.srv  CommandFan.srv  CommandServo.srv  GetEstopStatus.srv  PlanPath.srv  RestartSLAM.srv
all_seaing_navigation/: CMakeLists.txt  package.nix  package.xml
all_seaing_navigation/all_seaing_navigation/: a_star.py  a_star_server.cpp  buoy_pair_finder.py  find_center.py  grid_map_generator.py  map_publisher.py  map_publisher_test.py  mapping_server.py  nav_state_reporter.cpp  navigation_server.py  navigation_server2.py  navigation_server_continuous.py  navigation_server_nomap.py  navigation_server_tangent.py  obstacle_mapper.py  path_planner.py  planner_base.py  planner_executor.py  rviz_waypoint_sender.py  stationkeeping_goal_sender.cpp  stationkeeping_state_reporter.cpp  utils.py  utils_backup.py  waypoint_publisher.py  waypoint_publisher_test.py  waypoint_sender.py
all_seaing_perception/: CMakeLists.txt  package.nix  package.xml
all_seaing_perception/all_seaing_perception/: .bbox_project_pcloud.cpp.swp  .yolov8_node.py.swp  Hungarian.cpp  ONNX_test.py  args.yaml  bbox_project_pcloud.cpp  circle_detector.py  color_segmentation.py  color_segmentation_ycrcb.py  cross_detector.py  cross_detector_new.py  custom_time_synchronizers.py  dock_detection.py  dock_detector.py  factor_graph_slam.cpp  factor_graph_utilities.cpp  image_splitter.py  multicam_detection_merge.py  object_tracking_map.cpp  object_tracking_map_euclidean.cpp  obstacle.cpp  (+32 more)
all_seaing_ros2/: CMakeLists.txt  package.xml
all_seaing_rviz_plugins/: CMakeLists.txt  package.nix  package.xml  plugins_description.xml
all_seaing_tasks/: CMakeLists.txt  package.xml
all_seaing_utility/: CMakeLists.txt  package.nix  package.xml
(+6614 files in other folders)
