<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>all_seaing_interfaces</name>
    <version>0.0.0</version>
    <description>Interfaces for all_seaing_vehicle</description>
    <maintainer email="arcturus-logistics@mit.edu">arcturus</maintainer>
    <license>MIT</license>

    <!-- Ament build system dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export><build_type>ament_cmake</build_type></export>

    <!-- ROS2 interface build dependencies -->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <build_depend>builtin_interfaces</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- Message dependencies -->
    <depend>std_msgs</depend>

</package>
