<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>all_seaing_rviz_plugins</name>
    <version>0.0.0</version>
    <description>RViz plugins for all_seaing_vehicle</description>
    <maintainer email="arcturus-logistics@mit.edu">arcturus</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>pluginlib</depend>
    <depend>rviz_common</depend>
    <depend>rviz_default_plugins</depend>
    <depend>rviz_rendering</depend>
    <depend>all_seaing_interfaces</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
