<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>all_seaing_tasks</name>
    <version>0.0.0</version>
    <description>Task Manager</description>
    <maintainer email="arcturus-logistics@mit.edu">arcturus</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclpy</depend>
    <depend>rclcpp</depend>
    <depend>cv_bridge</depend>

    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
